# FastModelcraft

./: README.md  pyproject.toml
src/datamodel_viz/: __main__.py  cli.py  diagram_generator.py  example_models.py  model_parser.py
src/schema_mapper/: __main__.py  alembic_to_pydantic.py  cli.py  csv_to_pydantic.py  example.csv  example_models.py
